--- a/Report Project1/DeletionOfApproval.rdl
+++ b/Report Project1/DeletionOfApproval.rdl
@@ -1075,6 +1075,7 @@
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
     <ReportParameter Name="ToDate">
       <DataType>String</DataType>
@@ -1092,6 +1093,7 @@
       </DefaultValue>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
       <ValidValues>
         <ParameterValues>
           <ParameterValue>
