--- a/Report Project1/NotMarketedProductsReport.rdl
+++ b/Report Project1/NotMarketedProductsReport.rdl
@@ -1256,6 +1256,7 @@ where ps.LanseringsDatumEnd &lt;= @ToDate
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
