--- a/Report Project1/ProductsPackagesSubReport.rdl
+++ b/Report Project1/ProductsPackagesSubReport.rdl
@@ -663,11 +663,13 @@
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
     <ReportParameter Name="ProductId">
       <DataType>Integer</DataType>
       <Nullable>true</Nullable>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
