--- a/Report Project1/Packages_ProductsNotInMarketReport.rdl
+++ b/Report Project1/Packages_ProductsNotInMarketReport.rdl
@@ -1091,26 +1091,26 @@ ORDER  BY names.NAME </CommandText>
             <Width>10.89849in</Width>
             <Style>
               <Border>
-                <Style>Solid</Style>
+                <Style>Dotted</Style>
               </Border>
               <TopBorder>
                 <Color>Black</Color>
-                <Style>Solid</Style>
+                <Style>Dotted</Style>
                 <Width>1pt</Width>
               </TopBorder>
               <BottomBorder>
                 <Color>Black</Color>
-                <Style>Solid</Style>
+                <Style>Dotted</Style>
                 <Width>1pt</Width>
               </BottomBorder>
               <LeftBorder>
                 <Color>Black</Color>
-                <Style>Solid</Style>
+                <Style>Dotted</Style>
                 <Width>1pt</Width>
               </LeftBorder>
               <RightBorder>
                 <Color>Black</Color>
-                <Style>Solid</Style>
+                <Style>Dotted</Style>
                 <Width>1pt</Width>
               </RightBorder>
             </Style>
