--- a/Report Project1/PsurListReport.rdl
+++ b/Report Project1/PsurListReport.rdl
@@ -907,7 +907,7 @@ order by ps.PsurPeriodStart</CommandText>
             <Top>0.09667in</Top>
             <Left>2.24896cm</Left>
             <Height>0.43in</Height>
-            <Width>13.6146in</Width>
+            <Width>13.61459in</Width>
             <Style />
           </Tablix>
         </ReportItems>
@@ -1030,12 +1030,14 @@ order by ps.PsurPeriodStart</CommandText>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
     <ReportParameter Name="ToDate">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
     </ReportParameter>
     <ReportParameter Name="ResponsibleId">
       <DataType>Integer</DataType>
@@ -1046,6 +1048,7 @@ order by ps.PsurPeriodStart</CommandText>
         </DataSetReference>
       </DefaultValue>
       <Prompt>ReportParameter1</Prompt>
+      <Hidden>true</Hidden>
       <ValidValues>
         <DataSetReference>
           <DataSetName>Responsible</DataSetName>
